# projeto-MNIST_machine_learning

./: .gitignore  HyperparameterTuning.ipynb  model-best.h5  pyproject.toml  readme.md  requirements.txt
app/: image_processing.py  streamlit_app.py  teste.ipynb  teste_image_processing.ipynb
data/mnist/: open_files.ipynb
data/mnist/utils/: upload_data.ipynb
mlops/: config.py  download.py  preprocessing.py  segregate.py  train.py
notebooks/: EDA.ipynb  convolucional_mnist_estimators.ipynb  download.ipynb  image_processing.ipynb  preprocessed_x_test.npz  preprocessing.ipynb  test.ipynb  train.ipynb
notebooks/app/: keras_metadata.pb  saved_model.pb
