[tool.poetry]
name = "mnist-mlops"
version = "0.0.1"
description = "mlops pipeline with tensor-flow for the mnist dataset using concepts of mlops and digital image processing"
authors = ["Diego Rodrigues Medeiros[diego25rn@gmail.com]"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
